# forecast_salary

./: .gitignore  README.md  pyproject.toml  requirements.txt
forecast_salary/: constants.py  functions.py  main.py  models.py
tests/: test_forecast_salary.py
