[tool.poetry]
name = "forecast_salary"
version = "0.1.0"
description = ""
authors = ["BrunoMesquitaa <bruno2707@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
scikit-learn = "^1.2.2"
xgboost = "^1.7.6"
uvicorn = "^0.22.0"
pandas = "^2.0.2"
numpy = "^1.25.0"
catboost = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
